Bug 294053 - Setting a preference in Kontact to show/hide favorite folders in KMail has no effect
Summary: Setting a preference in Kontact to show/hide favorite folders in KMail has no...
Status: RESOLVED FIXED
Alias: None
Product: kmail2
Classification: Applications
Component: config dialog (other bugs)
Version First Reported In: 4.7
Platform: openSUSE Linux
: NOR minor
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-02-14 09:57 UTC by Christopher Yeleighton
Modified: 2012-02-15 08:43 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.8.1
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Christopher Yeleighton 2012-02-14 09:57:51 UTC
Version:           4.7 (using KDE 4.7.2) 
OS:                Linux

Nothing happens when you toggle appearance of KMail as a Kontact preference.

Reproducible: Always

Steps to Reproduce:
  1. Tell Kontact to show preferences.
  2. Toggle the Favorites box in KMail Appearance tab and apply.

Actual Results:  
  1. The Kontact preferences dialogue box.
  2. 

Expected Results:  
  2. Let Kontact show/hide the favorite folders.

OS: Linux (x86_64) release 3.1.9-1.4-desktop
Compiler: gcc

Workaround:
  1. Tell KMail to show preferences.
Comment 1 Laurent Montel 2012-02-14 10:00:26 UTC
I confirm it
Comment 2 Laurent Montel 2012-02-15 08:43:08 UTC
Git commit 7a21d006f12113919cc976b27f760a320cb08a17 by Montel Laurent.
Committed on 15/02/2012 at 09:42.
Pushed by mlaurent into branch 'master'.

Fix Bug 294053 - Setting a preference in Kontact to show/hide favorite folders in KMail has no effect

FIXED-IN: 4.8.1

M  +5    -0    kmail/kmkernel.cpp
M  +1    -0    kmail/kmkernel.h
M  +1    -0    kontact/src/CMakeLists.txt
A  +67   -0    kontact/src/kontactconfiguredialog.cpp     [License: GPL (v2)]
A  +46   -0    kontact/src/kontactconfiguredialog.h     [License: GPL (v2)]
M  +3    -2    kontact/src/mainwindow.cpp

http://commits.kde.org/kdepim/7a21d006f12113919cc976b27f760a320cb08a17
Comment 3 Laurent Montel 2012-02-15 08:43:50 UTC
Git commit 484b44f937f719a71da9d3d7df8ce7553fdba816 by Montel Laurent.
Committed on 15/02/2012 at 09:42.
Pushed by mlaurent into branch 'KDE/4.8'.

Fix Bug 294053 - Setting a preference in Kontact to show/hide favorite folders in KMail has no effect

FIXED-IN: 4.8.1
(cherry picked from commit 7a21d006f12113919cc976b27f760a320cb08a17)

M  +5    -0    kmail/kmkernel.cpp
M  +1    -0    kmail/kmkernel.h
M  +1    -0    kontact/src/CMakeLists.txt
A  +67   -0    kontact/src/kontactconfiguredialog.cpp     [License: GPL (v2)]
A  +46   -0    kontact/src/kontactconfiguredialog.h     [License: GPL (v2)]
M  +3    -2    kontact/src/mainwindow.cpp

http://commits.kde.org/kdepim/484b44f937f719a71da9d3d7df8ce7553fdba816