Fix Bug 294053 - Setting a preference in Kontact to show/hide favorite folders in KMail has no effect

FIXED-IN: 4.8.1
BUG: 294053